
* Tue Apr 26 2021 Pushkar Singh <psingh@sangoma.com> - 7.0.32
==================================================================
- Support for Kernel version 5.x.x - 5.8.x
- Use proc_ops on kernels >= 5.6
- Include proper support 32/64 bit timer data type
- User of KBUILD_MODPOST_WARN to properly support EXPORT_DEPENDENCIES
- Wanpipe script support for Ubuntu LTS 20.04

* Tue Feb 02 2021 Pushkar Singh <psingh@sangoma.com> - 7.0.31
==================================================================
- Support for Kernel version 4.18.0.240+
- Support for EL8+
- Wanpipe script support for Ubuntu 18.04+
- Adding backward compatibility based on libraries/structure changes and not on Linux version

* Tue Nov 10 2020 Pushkar Singh <psingh@sangoma.com> - 7.0.28
==================================================================
- Support for Kernel version 4.18.0.193+
- Wanpipe script support for Ubuntu 18.04+

* Tue Dec 26 2019 Pushkar Singh <psingh@sangoma.com> - 7.0.27
==================================================================
- Support for Kernel version 4.18.x+
- Disable global poll_mode depending upon user choise using TE_IGNORE_POLL_MODE parameter
- Support perl environment for perl version 5.26
- Adding backward compatibilty for older kernels both debian as well as redhat
- Fix detection of loopback codes on T1 ESF

* Tue Apr 02 2019 Pushkar Singh <psingh@sangoma.com> - 7.0.26
==================================================================
- Support for Kernel version 4.15+
- Support for GLIBC version 2.27+

* Wed Feb 23 2019 Nenad Corbic <ncorbic@sangoma.com> - 7.0.25
==================================================================
- Fix the build for DATA

* Wed Nov 15 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.24
==================================================================
- Adding backward compatibility for older kernel both debian as well redhat


* Thu Oct 12 2017 Pushkar Singh <psingh@sangoma.com> - 7.0.23