@@ -1,2 +1,2 @@
-wanpipe_linux: git ver 34a122f
+wanpipe_linux: git ver 3b8482c
 wanpipe_common: git ver e5ec437
