@@ -1,6 +1,6 @@
 %define WANPIPE_VER	  wanpipe-modules
 %define name              %{WANPIPE_VER}
-%define version           7.0.32
+%define version           7.0.33
 %define release           0
 %define	serial	 	  1
 %define MODULES_DIR	  /lib/modules
@@ -65,6 +65,7 @@ fi
 - Include proper support 32/64 bit timer data type
 - User of KBUILD_MODPOST_WARN to properly support EXPORT_DEPENDENCIES
 - Wanpipe script support for Ubuntu LTS 20.04
+- Makefile: 'M=' is preferred to 'SUBDIRS=' for external modules in order to build with latest 5.x kernels
 
 * Tue Feb 02 2021 Pushkar Singh <psingh@sangoma.com> - 7.0.31
 ==================================================================
