@@ -14,6 +14,7 @@ For more info visit: http://wiki.sangoma.com
 - Include proper support 32/64 bit timer data type
 - User of KBUILD_MODPOST_WARN to properly support EXPORT_DEPENDENCIES
 - Wanpipe script support for Ubuntu LTS 20.04
+- Makefile: 'M=' is preferred to 'SUBDIRS=' for external modules in order to build with latest 5.x kernels
 
 * Tue Feb 02 2021 Pushkar Singh <psingh@sangoma.com> - 7.0.31
 ==================================================================
